--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -15,9 +15,25 @@
     -webkit-justify-content: center;
             justify-content: center;
 }
+%force-center-right {
+    display: -webkit-flex;
+    display:         flex;
+    -webkit-align-items: center;
+            align-items: center;
+    -webkit-justify-content: flex-end;
+            justify-content: flex-end;
+}
+%force-center-left {
+    display: -webkit-flex;
+    display:         flex;
+    -webkit-align-items: center;
+            align-items: center;
+    -webkit-justify-content: flex-start;
+            justify-content: flex-start;
+}
 %transparent-mask {
     content: '';
-    background-color: rgba($color: #174357, $alpha: 0.7);
+    background-color: rgba($color: #5A5657, $alpha: 0.7);
     display: block;
     position: absolute;
     top: 0;
@@ -26,17 +42,107 @@
     bottom: 0;
 }
 
+
 .site-header {
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    background-color: #fff;
     z-index: 9;
     box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: 0.3);
+
+    .top-bar {
+        height: 75px;
+        background-color: #fff;
+
+        .short-cut {
+
+            ul {
+                @extend %force-center-left;
+                height: 100%;
+
+                li {
+                    padding: 0 20px;
+                    
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        width: 1px;
+                        height: 80%;
+                        right: 0;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        background-color: #ddd;
+                    }
+                    a {
+                        color: #666;
+    
+                    }
+                    &:nth-last-child(1) {
+                        &::after {
+                            content: none;
+                        }
+                    }
+                }
+            }
+            
+        }
+        .site-func {
+            @extend %force-center-right;
+            color: #EFEFEF;
+            
+            a {
+                color: #EFEFEF;
+            }
+            
+            .site-func-container {
+                @extend %force-center;
+                background-color: $custom_main;
+                margin-right: -15px;
+                height: 75px;
+                padding: 0 30px;
+                border-top-left-radius: 50px;
+                border-bottom-left-radius: 50px;
+
+                .search-bar {
+                    margin-right: 50px;
+                    .search-icon {
+                        
+                    }
+                    .search-input {
+                        width: 350px;
+                        background-color: transparent;
+                        border: none;
+                        margin: 0 10px;
+                        color: #EFEFEF;
+                        border-bottom: rgba($color: #fff, $alpha: .6) thin solid;
+
+                        &::placeholder {
+                            color: rgba($color: #fff, $alpha: .6);
+                        }
+                    }
+                    .close-icon {
+                        color: rgba($color: #fff, $alpha: .8);
+                    }
+                }
+                .mail-btn {
+                    margin-right: 50px;
+    
+                    a {
+    
+                    }
+                }
+                .locale-drop-select {
+    
+                }
+            }
+            
+        }
+    }
     
     .site-header-container {
-        height: 157px;
+        height: 120px;
+        background-color: rgba($color: #fff, $alpha: .85);
         
         .site-logo {
             position: absolute;
@@ -47,58 +153,43 @@
                 width: 360px;
             }
         }
-        .top-bar {
-            ul.site-func {
-                position: absolute;
-                transform: translateY(-50%);
-                right: 0;
-                top: 30%;
-                z-index: 1;
-                
-                li {
-                    display: inline-block;
-                    padding: 0 8px;
-    
-                    a {
-                        color: #666;
-                        font-size: 14px;
-                        font-weight: 600;
-                        padding: 5px 5px;
-                        border-radius: 5px;
-                        text-decoration: none;
-                        transition: all .2s ease;
-    
-                        &.active, &:hover {
-                            background-color: $custom_main;
-                            color: #fff;
-                        }
-                    }
-                }
-            }
-        }
+        
         
         ul.site-menu {
             position: absolute;
             transform: translateY(-50%);
             right: 0;
-            top: 66%;
+            top: 50%;
 
             li {
                 display: inline-block;
                 padding: 0 15px;
                 
                 a {
-                    color: #164358;
+                    color: #333;
                     font-size: 18px;
                     font-weight: 600;
                     padding: 5px 15px;
-                    border-radius: 5px;
                     text-decoration: none;
                     transition: all .2s ease;
 
                     &.active, &:hover {
-                        background-color: #164358;
-                        color: #fff;
+                        background-color: #fff;
+                        color: #333;
+                    }
+                    &.dropdown {
+                        padding-right: 30px;
+
+                        &::before {
+                            position: absolute;
+                            top: 49%;
+                            right: 0px;
+                            color: #E70034;
+                            -webkit-transform: translate(-50%, -50%);
+                            transform: translate(-50%, -50%) rotate(135deg);
+                            content: '\25E5';
+                            font-size: 24px;
+                        }
                     }
                 }
             }
@@ -174,8 +265,28 @@
 }
 
 .site-content {
-    margin-top: 157px;
+    margin-top: 75px;
     min-height: 157px;
+
+    .btn-section {
+        text-align: center;
+        padding: 50px 0;
+
+        .learn-more-btn {
+            text-decoration: none;
+            display: inline-block;
+            color: #FFF;
+            font-size: 1.3rem;
+            background-color: $custom_main;
+            padding: 30px 80px;
+            box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: .8);
+            transition: all .2s ease;
+
+            &:hover {
+                box-shadow: 2px 2px 12px 4px rgba($color: #000000, $alpha: .4);
+            }
+        }
+    }
 
     // Index
     .index-banner-divider {
@@ -217,47 +328,217 @@
         .swiper-wrapper {
             .swiper-slide {
                 .slide-item {
-                    padding: 40px;
+                    @extend %force-center;
+                    padding: 20px;
                     position: absolute;
-                    width: 40%;
-                    background-color: rgba(22, 67, 88, 0.65);
-                    border-radius: 10px;
+                    min-width: 40%;
                     max-width: 100%;
                     color: #FFF;
-                    right: 11%;
-                    text-align: left;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
+            }
+        }
+    }
+    .factory-list {
+        color: #fff;
 
-                    h2 {
-                        font-weight: 700;
-                        font-size: 2.6rem;
-                        margin-bottom: 12px;
-                        text-shadow: 7px 7px 12px rgba($color: #000000, $alpha: 0.6);
-                    }
-                    .slide-info {
-                        line-height: 48px;
-                        opacity: 0.8;
-                    }
-                    a.slide-btn {
+        .factory-item {
+            @extend %force-center;
+
+            .border-bar {
+                position: absolute;
+                height: 1px;
+                width: 100%;
+                bottom: 48px;
+                left: 50%;
+                transform: translateX(-50%);
+                background-color: rgba($color: #fff, $alpha: .8);
+            }
+            &:nth-child(1) {
+                .border-bar {
+                    left: 100%;
+                }
+            }
+            &:nth-child(4) {
+                .border-bar {
+                    left: 0%;
+                }
+            }
+            .factory-item-info {
+                overflow: hidden;
+                margin: 30px auto;
+                text-align: center;
+                font-size: 1.25rem;
+                font-weight: 300;
+                padding-bottom: 40px;
+                z-index: 1;
+                
+                p {
+                    margin: 0;
+                }
+                &::before, &::after {
+                    position: absolute;
+                    content: '';
+                    left: 50%;
+                    transform: translateX(-50%);
+                    border-radius: 100%;
+                }
+                &::after {
+                    width: 18px;
+                    height: 18px;
+                    bottom: 10px;
+                }
+                &::before {
+                    width: 22px;
+                    height: 22px;
+                    bottom: 8px;
+                    background-color: #fff;
+                    box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: 0.6);
+                }
+            }
+            &.food-safety {
+                background-color: #E70034;
+                .factory-item-info::after {
+                    background-color: #E70034;
+                }
+            }
+            &.bioengineering {
+                background-color: #33A1DC;
+                .factory-item-info::after {
+                    background-color: #33A1DC;
+                }
+            }
+            &.innovation {
+                background-color: #ABCD05;
+                .factory-item-info::after {
+                    background-color: #ABCD05;
+                }
+            }
+            &.factory {
+                background-color: #F39801;
+                .factory-item-info::after {
+                    background-color: #F39801;
+                }
+            }
+        }
+        
+    }
+    .index-info {
+        padding: 50px 0;
+
+        .index-info-text-section {
+            text-align: center;
+            padding-bottom: 30px;
+            color: #666;
+
+            hr {
+                width: 125px;
+                border-top: 5px red solid;
+                margin: 50px auto;
+            }
+            p {
+                font-size: 1.4rem;
+            }
+        }
+        .about-section-item {
+            // padding: 10px;
+
+            .section-item {
+                border: #ddd solid thin;
+                border-radius: 3px;
+                padding: 15px;
+                transition: all .2s ease;
+
+                .featureImage {
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    padding-bottom: 65%;
+                }
+                h3 {
+                    text-align: center;
+                    margin: 15px auto;
+                    color: #666;
+                    font-size: 2.2rem;
+                }
+                .text {
+                    color: #999;
+                    font-size: 1.3rem;
+                    line-height: 3rem;
+                }
+                .btn-section {
+                    padding: 25px 0;
+
+                    .learn-more-btn {
+                        text-decoration: none;
                         display: inline-block;
-                        padding: 8px 35px;
-                        border: #FFF thin solid;
-                        margin-top: 24px;
-                        border-radius: 5px;
-                        color: #FFF;
-                        opacity: 0.8;
+                        color: #EFEFEF;
+                        font-size: 1.3rem;
+                        background-color: $custom_main;
+                        padding: 15px 80px;
+                        transition: all .2s ease;
+                        box-shadow: none;
+                    }
+                }
+                &:hover {
+                    box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: .6);
+                }
+            }
+        }
+        .cate-type {
+
+            .cate-type-item {
+                width: 19%;
+                margin: 0.5%;
+                display: inline-block;
+                
+                .info {
+                    padding-bottom: 100%;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+
+                    .text {
+                        position: absolute;
+                        text-align: center;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+
+                        p {
+                            margin: 0;
+                            color: #EFEFEF;
+                            font-size: 1.5rem;
+                            font-weight: bold;
+                        }
+                    }
+                    &::before {
+                        @extend %transparent-mask; 
                     }
                 }
             }
         }
     }
     .index-count-down {
-        background-color: #164358;
+        background: url('/img/numbers-of-banner.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
         min-height: 180px;
+        padding-bottom: 10px;
 
         .count-down-row {
             max-width: 1585px;
             margin: 0 auto;
 
+            h2 {
+                color: #EFEFEF;
+                text-align: center;
+                margin-bottom: 0;
+                margin-top: 30px;
+                font-size: 2.4rem;
+            }
             .count-down-box {
                 display: -webkit-flex;
                 display: flex;
@@ -290,7 +571,7 @@
                     -webkit-flex: 1;
                             flex: 1;
                     .number {
-                        font-size: 3.2rem;
+                        font-size: 4.5rem;
                     }
                     .text {
                         font-size: 1.3rem;
@@ -644,6 +925,54 @@
                     }
                 }
             }
+        }
+    }
+    .fancybox-btn {
+        text-decoration: none;
+    }
+    .vdieo-present-section {
+        @extend %force-center;
+        height: 500px;
+        overflow: hidden;     
+
+        .info {
+            color: #FFF;
+            text-align: center;
+
+            h2 {
+                font-size: 3rem;
+            }
+            h4 {
+                margin: 20px 0;
+            }
+        }
+        &:hover::after {
+            transform: scale(1.2);
+        }
+        &::after {
+            content: '';
+            background: url('/img/site-logo/video.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            z-index: -1;
+            transition: all 1s ease; 
+        }
+        &::before {
+            content: '';
+            background-color: rgba($color: #000, $alpha: 0.7);
+            display: block;
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
         }
     }
 
