--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -41,6 +41,13 @@
     right: 0;
     bottom: 0;
 }
+%link-mask {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
 
 
 .site-header {
@@ -105,28 +112,53 @@
                 border-bottom-left-radius: 50px;
 
                 .search-bar {
-                    margin-right: 50px;
+                    margin-right: 20px;
                     .search-icon {
-                        
+                        width: 22px;
+                        position: absolute;
+                        top: 50%;
+                        transform: translateY(-50%);
+                        z-index: 1;
+                        cursor: pointer;
                     }
-                    .search-input {
+                    
+                    .search-input-group {
+                        padding-right: 30px;
                         width: 350px;
-                        background-color: transparent;
-                        border: none;
-                        margin: 0 10px;
-                        color: #EFEFEF;
-                        border-bottom: rgba($color: #fff, $alpha: .6) thin solid;
+                        transition: all 1s ease-out;
 
-                        &::placeholder {
-                            color: rgba($color: #fff, $alpha: .6);
+                        .search-input {
+                            width: calc(100% - 35px);
+                            background-color: transparent;
+                            border: none;
+                            margin: 0 0 0 30px;
+                            color: #EFEFEF;
+                            border-bottom: rgba($color: #fff, $alpha: .6) thin solid;
+    
+                            &::placeholder {
+                                color: rgba($color: #fff, $alpha: .6);
+                            }
+                        }
+                        .close-icon {
+                            width: 22px;
+                            position: absolute;
+                            top: 50%;
+                            right: 0;
+                            transform: translateY(-50%);
+                            transition: all 1s ease-out;
+                        }
+                        &.hide {
+                            width: 0px;
+
+                            .close-icon {
+                                width: 0px;
+                            }
                         }
                     }
-                    .close-icon {
-                        color: rgba($color: #fff, $alpha: .8);
-                    }
                 }
+                
                 .mail-btn {
-                    margin-right: 50px;
+                    margin-right: 26px;
     
                     a {
     
@@ -150,7 +182,7 @@
             transform: translateY(-50%);
             
             img {
-                width: 360px;
+                max-width: 100%;
             }
         }
         
@@ -280,9 +312,10 @@
             background-color: $custom_main;
             padding: 30px 80px;
             box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: .8);
-            transition: all .2s ease;
+            transition: all .5s ease-out;
 
             &:hover {
+                transform: scale(1.1);
                 box-shadow: 2px 2px 12px 4px rgba($color: #000000, $alpha: .4);
             }
         }
@@ -328,7 +361,6 @@
         .swiper-wrapper {
             .swiper-slide {
                 .slide-item {
-                    @extend %force-center;
                     padding: 20px;
                     position: absolute;
                     min-width: 40%;
@@ -337,6 +369,22 @@
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%, -50%);
+                    display: -webkit-flex;
+                    display: flex;
+                    width: fit-content;
+        
+                    .type-icon {
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        background-size: contain;
+                    }
+                    .flex-column {
+                        color: #fff;
+                        text-align: center;
+                        padding: 0 20px;
+                        -webkit-flex: 1;
+                                flex: 1;
+                    }
                 }
             }
         }
@@ -346,7 +394,16 @@
 
         .factory-item {
             @extend %force-center;
+            overflow: hidden;
 
+            a {
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                z-index: 5;
+            }
             .border-bar {
                 position: absolute;
                 height: 1px;
@@ -366,6 +423,25 @@
                     left: 0%;
                 }
             }
+            &:hover {
+                .factory-item-info {
+                    transform: scale(1.05);
+                    transition: all 1s ease-out;
+
+                    &::before, &::after {
+                        transform: translateX(-50%) scale(1.3);
+                    }
+                    &::after {
+                        z-index: 2;
+                    }
+                    &::before {
+                        z-index: 4;
+                    }
+                }
+                .border-bar {
+                    z-index: 0;
+                }
+            }
             .factory-item-info {
                 overflow: hidden;
                 margin: 30px auto;
@@ -373,7 +449,6 @@
                 font-size: 1.25rem;
                 font-weight: 300;
                 padding-bottom: 40px;
-                z-index: 1;
                 
                 p {
                     margin: 0;
@@ -384,41 +459,45 @@
                     left: 50%;
                     transform: translateX(-50%);
                     border-radius: 100%;
+                    transition: all 1s ease-out;
                 }
                 &::after {
-                    width: 18px;
-                    height: 18px;
-                    bottom: 10px;
-                }
-                &::before {
                     width: 22px;
                     height: 22px;
                     bottom: 8px;
                     background-color: #fff;
                     box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: 0.6);
+                    z-index: 2;
+                }
+                &::before {
+                    width: 18px;
+                    height: 18px;
+                    bottom: 10px;
+                    z-index: 3;
+                    
                 }
             }
             &.food-safety {
                 background-color: #E70034;
-                .factory-item-info::after {
+                .factory-item-info::before {
                     background-color: #E70034;
                 }
             }
             &.bioengineering {
                 background-color: #33A1DC;
-                .factory-item-info::after {
+                .factory-item-info::before {
                     background-color: #33A1DC;
                 }
             }
             &.innovation {
                 background-color: #ABCD05;
-                .factory-item-info::after {
+                .factory-item-info::before {
                     background-color: #ABCD05;
                 }
             }
             &.factory {
                 background-color: #F39801;
-                .factory-item-info::after {
+                .factory-item-info::before {
                     background-color: #F39801;
                 }
             }
@@ -451,6 +530,9 @@
                 padding: 15px;
                 transition: all .2s ease;
 
+                a.cover-link {
+                    @extend %link-mask;
+                }
                 .featureImage {
                     background-repeat: no-repeat;
                     background-size: cover;
@@ -492,12 +574,32 @@
                 width: 19%;
                 margin: 0.5%;
                 display: inline-block;
+                overflow: hidden;
                 
+                a {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+                    bottom: 0;
+                }
+                &:hover {
+                    .info {
+                        transform: scale(1.1);
+                        .text {
+                            opacity: 1;
+                        }
+                        &::before {
+                            background-color: rgba($color: #5A5657, $alpha: 0.7);
+                        }
+                    }
+                }
                 .info {
                     padding-bottom: 100%;
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: cover;
+                    transition: all .5s ease-out;
 
                     .text {
                         position: absolute;
@@ -505,6 +607,8 @@
                         top: 50%;
                         left: 50%;
                         transform: translate(-50%, -50%);
+                        transition: all .5s ease-out;
+                        opacity: 0;
 
                         p {
                             margin: 0;
@@ -514,7 +618,15 @@
                         }
                     }
                     &::before {
-                        @extend %transparent-mask; 
+                        content: '';
+                        background-color: rgba($color: #5A5657, $alpha: 0);
+                        display: block;
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        right: 0;
+                        bottom: 0;
+                        transition: all .5s ease-out;
                     }
                 }
             }
@@ -572,6 +684,7 @@
                             flex: 1;
                     .number {
                         font-size: 4.5rem;
+                        font-weight: 600;
                     }
                     .text {
                         font-size: 1.3rem;
@@ -1151,6 +1264,13 @@
                         transform: translate(-50%, -50%);
                         background-color: #eee;
                     }
+                    .icp-card {
+                        text-align: center;
+
+                        a {
+                            @extend %link-mask;
+                        }
+                    }
                 }
                 .site-map {
                     padding: 30px;
@@ -1221,7 +1341,7 @@
     }
 
     .info {
-        padding: 45px;
+        padding: 40px 0;
         color: #fff;
 
         a {
