--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -48,6 +48,21 @@
     right: 0;
     bottom: 0;
 }
+%default-btn {
+    text-decoration: none;
+    display: inline-block;
+    color: #EFEFEF;
+    font-size: 15px;
+    background-color: $custom_main;
+    padding: 15px 80px;
+    transition: all .2s ease;
+    box-shadow: none;
+    border-radius: 100px;
+
+    :hover {
+        transform: scale(1.05);
+    }
+}
 
 
 .site-header {
@@ -59,10 +74,11 @@
     box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: 0.3);
 
     .top-bar {
-        height: 75px;
+        height: 60px;
         background-color: #fff;
 
         .short-cut {
+            font-size: 15px;
 
             ul {
                 @extend %force-center-left;
@@ -96,25 +112,27 @@
         }
         .site-func {
             @extend %force-center-right;
-            color: #EFEFEF;
+            color: #666;
+            font-size: 15px;
             
             a {
-                color: #EFEFEF;
+                color: #666;
             }
             
             .site-func-container {
                 @extend %force-center;
-                background-color: $custom_main;
+                // background-color: $custom_main;
                 margin-right: -15px;
-                height: 75px;
+                height: 60px;
                 padding: 0 30px;
                 border-top-left-radius: 50px;
                 border-bottom-left-radius: 50px;
 
+
                 .search-bar {
-                    margin-right: 20px;
+                    margin-right: 14px;
                     .search-icon {
-                        width: 22px;
+                        width: 20px;
                         position: absolute;
                         top: 50%;
                         transform: translateY(-50%);
@@ -136,14 +154,14 @@
                             border-bottom: rgba($color: #fff, $alpha: .6) thin solid;
     
                             &::placeholder {
-                                color: rgba($color: #fff, $alpha: .6);
+                                color: #666;
                             }
                         }
                         .close-icon {
                             width: 22px;
                             position: absolute;
                             top: 50%;
-                            right: 0;
+                            right: 10px;
                             transform: translateY(-50%);
                             transition: all 1s ease-out;
                         }
@@ -182,7 +200,8 @@
             transform: translateY(-50%);
             
             img {
-                max-width: 100%;
+                width: 100%;
+                max-width: 470px;
             }
         }
         
@@ -297,7 +316,7 @@
 }
 
 .site-content {
-    margin-top: 75px;
+    margin-top: 60px;
     min-height: 157px;
 
     .btn-section {
@@ -305,19 +324,7 @@
         padding: 50px 0;
 
         .learn-more-btn {
-            text-decoration: none;
-            display: inline-block;
-            color: #FFF;
-            font-size: 1.3rem;
-            background-color: $custom_main;
-            padding: 30px 80px;
-            box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: .8);
-            transition: all .5s ease-out;
-
-            &:hover {
-                transform: scale(1.1);
-                box-shadow: 2px 2px 12px 4px rgba($color: #000000, $alpha: .4);
-            }
+            @extend %default-btn;
         }
     }
 
@@ -408,7 +415,7 @@
                 position: absolute;
                 height: 1px;
                 width: 100%;
-                bottom: 48px;
+                bottom: 33px;
                 left: 50%;
                 transform: translateX(-50%);
                 background-color: rgba($color: #fff, $alpha: .8);
@@ -444,9 +451,9 @@
             }
             .factory-item-info {
                 overflow: hidden;
-                margin: 30px auto;
+                margin: 15px auto;
                 text-align: center;
-                font-size: 1.25rem;
+                font-size: 15px;
                 font-weight: 600;
                 padding-bottom: 40px;
                 
@@ -507,18 +514,25 @@
     .index-info {
         padding: 50px 0;
 
+        &.about-pro {
+            padding-bottom: 10px;
+        }
         .index-info-text-section {
             text-align: center;
             padding-bottom: 30px;
             color: #666;
 
+            h2 {
+                font-size: 24px;
+                font-weight: 700;
+            }
             hr {
                 width: 125px;
                 border-top: 5px red solid;
-                margin: 50px auto;
+                margin: 30px auto;
             }
             p {
-                font-size: 1.4rem;
+                font-size: 15px;
             }
         }
         .about-section-item {
@@ -542,25 +556,18 @@
                     text-align: center;
                     margin: 15px auto;
                     color: #666;
-                    font-size: 2.2rem;
+                    font-size: 24px;
                 }
                 .text {
                     color: #999;
-                    font-size: 1.3rem;
-                    line-height: 3rem;
+                    font-size: 15px;
+                    line-height: 30px;
                 }
                 .btn-section {
                     padding: 25px 0;
 
                     .learn-more-btn {
-                        text-decoration: none;
-                        display: inline-block;
-                        color: #EFEFEF;
-                        font-size: 1.3rem;
-                        background-color: $custom_main;
-                        padding: 15px 80px;
-                        transition: all .2s ease;
-                        box-shadow: none;
+                        @extend %default-btn;
                     }
                 }
                 &:hover {
@@ -582,6 +589,7 @@
                     left: 0;
                     right: 0;
                     bottom: 0;
+                    font-size: 15px;
                 }
                 &:hover {
                     .info {
@@ -613,7 +621,7 @@
                         p {
                             margin: 0;
                             color: #EFEFEF;
-                            font-size: 1.5rem;
+                            font-size: 15px;
                             font-weight: bold;
                         }
                     }
@@ -649,7 +657,7 @@
                 text-align: center;
                 margin-bottom: 0;
                 margin-top: 30px;
-                font-size: 2.4rem;
+                font-size: 24px;
             }
             .count-down-box {
                 display: -webkit-flex;
@@ -683,11 +691,12 @@
                     -webkit-flex: 1;
                             flex: 1;
                     .number {
-                        font-size: 4.5rem;
+                        font-size: 50px;
                         font-weight: 600;
                     }
                     .text {
-                        font-size: 1.3rem;
+                        font-weight: 700;
+                        font-size: 15px;
                     }
                 }
             }
@@ -768,15 +777,7 @@
             padding: 50px 0;
 
             .learn-more-btn {
-                text-decoration: none;
-                display: inline-block;
-                color: #FFF;
-                border-radius: 5px;
-                font-size: 1.2rem;
-                background-color: $main-color;
-                padding: 15px 50px;
-                box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: .8);
-                transition: all .2s ease;
+                @extend %default-btn;
 
                 &:hover {
                     box-shadow: 2px 2px 12px 4px rgba($color: #000000, $alpha: .4);
@@ -936,7 +937,7 @@
                     border-top-left-radius: 10px;
                     border-top-right-radius: 10px; 
                     color: #333;
-                    font-size: 1.25rem;
+                    font-size: 15px;
                     flex: 1;
 
                     &.active {
@@ -982,15 +983,7 @@
             padding: 50px 0;
 
             .learn-more-btn {
-                text-decoration: none;
-                display: inline-block;
-                color: #FFF;
-                border-radius: 5px;
-                font-size: 1.2rem;
-                background-color: $main-color;
-                padding: 15px 50px;
-                box-shadow: 2px 2px 12px -2px rgba($color: #000000, $alpha: .8);
-                transition: all .2s ease;
+                @extend %default-btn;
 
                 &:hover {
                     box-shadow: 2px 2px 12px 4px rgba($color: #000000, $alpha: .4);
@@ -1053,10 +1046,15 @@
             text-align: center;
 
             h2 {
-                font-size: 3rem;
+                font-size: 36px;
             }
             h4 {
+                font-size: 24px;
                 margin: 20px 0;
+                font-weight: 600;
+            }
+            .play-btn {
+                width: 70px;
             }
         }
         &:hover::after {
@@ -1221,6 +1219,7 @@
                 }
                 .site-info {
                     padding: 20px;
+                    font-size: 15px;
 
                     .footer-logo {
                         width: 100%;
@@ -1230,9 +1229,13 @@
                             width: 100%;
                         }
                     }
-                    .contact-info {
+                    ul.contact-info {
                         padding: 10px 20px 20px 20px;
                         color: #999;
+
+                        li {
+                            line-height: 30px;
+                        }
                     }
                 }
                 
@@ -1243,6 +1246,7 @@
                             align-items: center;
                     -webkit-justify-content: center;
                             justify-content: center;
+                    color: #666;
 
                     &::before {
                         position: absolute;
@@ -1276,7 +1280,7 @@
                     padding: 30px;
 
                     h5 {
-                        font-size: 1.5rem;
+                        font-size: 24px;
                         font-weight: bold;
                         margin-bottom: 0.8rem;
                     }
@@ -1287,7 +1291,7 @@
                             
                             a {
                                 color: #999;
-                                font-size: 1.1rem;
+                                font-size: 15px;
                             }
                             &::before {
                                 position: absolute;
@@ -1310,6 +1314,7 @@
 
 .site-copyright {
     background-color: $custom_main;
+    font-size: 15px;
 
     &::before {
         position: absolute;
@@ -1341,7 +1346,7 @@
     }
 
     .info {
-        padding: 40px 0;
+        padding: 30px 0;
         color: #fff;
 
         a {
