--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -388,7 +388,8 @@
                     .flex-column {
                         color: #fff;
                         text-align: center;
-                        padding: 0 20px;
+                        padding: 30px 20px;
+
                         -webkit-flex: 1;
                                 flex: 1;
                     }
