footer logo width issu

--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -1251,7 +1251,7 @@
 
                     .footer-logo {
                         width: 100%;
-                        // max-width: 420px;
+                        max-width: 420px;
                         text-align: center;
 
                         img {
