--- a/resources/assets/sass/frontend/template/nizawa/index.scss
+++ b/resources/assets/sass/frontend/template/nizawa/index.scss
@@ -1252,7 +1252,7 @@
                     .footer-logo {
                         width: 100%;
                         max-width: 420px;
-                        text-align: center;
+                        // text-align: center;
 
                         img {
                             width: 100%;
