--- a/resources/assets/sass/frontend-style.scss
+++ b/resources/assets/sass/frontend-style.scss
@@ -41,7 +41,7 @@
 // Template
 
 // Index
-@import "frontend/template/nizawa/style";
+@import "frontend/template/Grape King/style";
 
 // Index
-@import "frontend/template/nizawa/index";
+@import "frontend/template/Grape King/index";
