--- a/resources/assets/sass/frontend/style.scss
+++ b/resources/assets/sass/frontend/style.scss
@@ -639,9 +639,16 @@ table.product-comment {
     }
 }
 
+.slick-dots {
+    left: 0;
+    right: 0;
+}
 
 @media screen and (max-width: 991px) {
 }
 
 @media screen and (max-width: 630px) {
+    .scrollDown {
+        display: none;
+    }
 }
